<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qui veut manger un KitKat ?</string>
    <string name="hello_world">Hello world!</string>
    <string name="nb_cours">%1$d cours viennent d\'être mis à jours</string>
    <string name="direct">Accès direct à pamplemousse viewer</string>
    <string name="refresh">Refresh</string>

    <!-- Nom des menus ! -->

    <string name="home">Qui veut un KitKat ?</string>
    <string name="pamp_viewer">Accès à Pamplemousse</string>
    <string name="agenda_null">Première connection ? Renseignez vos identifiants, et synchroniser</string>
    <string name="url_error">Impossible de se connecter au serveur, veuillez vérifier vos identifiants et votre connection à internet</string>
    <string name="menu_pampl">Accès à Pamplemousse</string>
    <string name="connection">Accès à Pamplemousse</string>
    <string name="remote">Accès à Pamplemousse en ligne</string>
    <string name="pampl_desc">Emploi du temps, mails,...</string>
    <string name="geo">Accés au service de Géolocalisation</string>
    <string name="geo_desc">Géolocalisation</string>
    <string name="meteo">Accés au service Météo</string>
    <string name="meteo_desc">Prévisions météo pour : </string>
    <string name="meteo_tc">Températures</string>
    <string name="meteo_wind">Vent</string>
    <string name="meteo_rain">Pluie</string>
    <string name="meteo_clouds">Nuages</string>
    <string name="valider_localite">Valider</string>

    <!-- Cas non défini -->

    <string name="to_be_defined">Doit etre défini</string>

    <!-- Test login -->

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="image_content_description">Un Android avec un chien</string>
    <string name="login">S\'identifier</string>
    <string name="email">Id utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="get_localite">Récupérer ma localisation actuelle</string>
    <string name="saisir_localite">Saisir une ville ici</string>
    <string name="desc_saisie_localite">Vous pouvez saisir une localité</string>
    <string name="temp">Ce champ doit etre rempli</string>
    <string name="geoloc_osm">Géolocationsation par OSM/OCM</string>

</resources>