<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

      <!-- Afficher les  informations météo -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.30"
        android:background="@color/black_color"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <!-- Titre et ville -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/desc_meteo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meteo_desc"
                android:textColor="@color/silver" />

            <TextView
                android:id="@+id/afficher_localite_meteo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_defined"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Info météo : temperature, pluie, vent, nuages -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- température -->

            <TableRow
                android:id="@+id/row_meteo_temperature"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/desc_temp"
                    android:gravity="right"
                    android:padding="8dp"
                    android:text="@string/meteo_tc"
                    android:textColor="@color/silver" />

                <TextView
                    android:id="@+id/info_temp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/to_be_defined"
                    android:textColor="@color/white" />
            </TableRow>

            <!-- pluie -->

            <TableRow
                android:id="@+id/row_meteo_pluie"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/desc_pluie"
                    android:gravity="right"
                    android:padding="8dp"
                    android:text="@string/meteo_rain"
                    android:textColor="@color/silver" />

                <TextView
                    android:id="@+id/info_pluie"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/to_be_defined"
                    android:textColor="@color/white" />
            </TableRow>
            <!-- vent -->

            <TableRow
                android:id="@+id/row_meteo_vent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/desc_vent"
                    android:gravity="right"
                    android:padding="8dp"
                    android:text="@string/meteo_wind"
                    android:textColor="@color/silver" />

                <TextView
                    android:id="@+id/info_vent"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/to_be_defined"
                    android:textColor="@color/white" />
            </TableRow>

            <!-- nuages -->

            <TableRow
                android:id="@+id/row_meteo_nuages"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/desc_nuages"
                    android:gravity="right"
                    android:padding="8dp"
                    android:text="@string/meteo_clouds"
                    android:textColor="@color/silver" />

                <TextView
                    android:id="@+id/info_nuages"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/to_be_defined"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    
    
    <!-- Acceder à une localisation -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/black_color"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_saisie_localite"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/meteo_saisie_localite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saisir_localite" />

        <Button
            android:id="@+id/meteo_recuperer_localite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="recupererLocalisationAppareil"
            android:text="@string/get_localite" />
    </LinearLayout>

  

</LinearLayout>